<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:shortcutId="add_transaction"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_add"
        android:shortcutShortLabel="@string/shortcut_add_short"
        android:shortcutLongLabel="@string/shortcut_add_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetClass="ru.plumsoftware.finance.MainActivity"
            android:targetPackage="ru.plumsoftware.finance"
            android:data="finance://app/add_transaction" />
    </shortcut>
    <shortcut
        android:shortcutId="history"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_history"
        android:shortcutShortLabel="@string/shortcut_history_short"
        android:shortcutLongLabel="@string/shortcut_history_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetClass="ru.plumsoftware.finance.MainActivity"
            android:targetPackage="ru.plumsoftware.finance"
            android:data="finance://app/history" />
    </shortcut>
    <shortcut
        android:shortcutId="limits"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_limits"
        android:shortcutShortLabel="@string/shortcut_limits_short"
        android:shortcutLongLabel="@string/shortcut_limits_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetClass="ru.plumsoftware.finance.MainActivity"
            android:targetPackage="ru.plumsoftware.finance"
            android:data="finance://app/limits" />
    </shortcut>
    <shortcut
        android:shortcutId="analytics"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_analytics"
        android:shortcutShortLabel="@string/shortcut_analytics_short"
        android:shortcutLongLabel="@string/shortcut_analytics_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetClass="ru.plumsoftware.finance.MainActivity"
            android:targetPackage="ru.plumsoftware.finance"
            android:data="finance://app/analytics" />
    </shortcut>
</shortcuts>
